validacion de cliente con tarjeta de credito
